--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -10,7 +10,7 @@
             gap: 15px;
             margin-bottom: 23px;
             .line{
-                background: #a7dfb1;
+                background: rgb(171, 221, 177);
                 border-radius: 3px;
                 width: 28px;
                 height: 1px;
@@ -65,8 +65,7 @@
         position: absolute;
         right: -140px;
         bottom: -10px;
-        width: 982px;
-        height: 626px;
+        width: 600px;
         z-index: -1;
         img{
             width: 100%;
@@ -77,7 +76,6 @@
 
 @media only screen and (max-width: 1200px) {
     .hero{
-        height: 800px;
         .hero-bg{
             bottom: 0;
         }
@@ -145,10 +143,22 @@
     }
     
 }
+@media only screen and (max-width: 750px) {
+    .hero{
+        height: 500px;
+        .hero-bg{
+            width: 600px;
+            right: -150px;
+            bottom: 0px;
+            
+        }
+    }
+    
+}
 
 @media only screen and (max-width: 640px) {
     .hero{
-        height: 650px;
+        height: 500px;
         .hero-content{
             h1{
                 font-size: 24px;
@@ -163,11 +173,14 @@
                 }
             }
             .hero-bottom{
-                margin: 250px auto;
+                margin: 100px auto;
+                p{
+                    font-weight: 600;
+                }
             }
         }
         .hero-bg{
-            bottom: 50px;
+            bottom: 0;
         }
     }
     
@@ -175,7 +188,7 @@
 
 @media only screen and (max-width: 480px) {
     .hero{
-        height: 720px;
+        height: 550px;
         .hero-content{
             .korea-lng{
                 p{
@@ -193,7 +206,7 @@
                 }
             }
             .hero-bottom{
-                margin: 340px auto;
+                margin: 100px auto;
                 a{
                     button{
                         width: 300px;
@@ -202,7 +215,8 @@
             }
         }
         .hero-bg{
-            bottom: 50px;
+            width: 500px;
+            bottom: 0;
         }
     }
     
