--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,4 +14,5 @@
 @import "./components/course";
 @import "./components/academy";
 @import "./components/faq";
-@import "./components/support"
+@import "./components/support";
+@import "./components/modal"
