--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,4 +15,5 @@
 @import "./components/academy";
 @import "./components/faq";
 @import "./components/support";
-@import "./components/modal"
+@import "./components/modal";
+@import "./components/news"
