--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -51,3 +51,35 @@
         }
     }
 }
+
+@media only screen and (max-width: 800px) {
+    .modal-content{
+        h3{
+            font-size: 25px;
+            max-width: 300px;
+        }
+        .modal-description{
+            margin: 0 auto 20px;
+            font-size: 16px;
+            max-width: 400px;
+        }
+        form{
+            input{
+                height: 50px;
+                font-size: 16px;
+            }
+            .input-tel{
+                height: 50px;
+                font-size: 16px;
+            }
+            .input-button{
+                font-size: 16px;
+            }
+            button{
+                height: 50px;
+                font-size: 16px;
+            }
+        }
+    }
+    
+}
