--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -189,6 +189,7 @@
 @media only screen and (max-width: 480px) {
     .hero{
         height: 550px;
+        padding-bottom: 0;
         .hero-content{
             .korea-lng{
                 p{
