--- a/src/styles/components/_result.scss
+++ b/src/styles/components/_result.scss
@@ -1,5 +1,5 @@
 .result{
-    padding: 50px 0 75px;
+    padding: 50px 0 0;
     .result-content{
         .title{
             margin-bottom: 65px;
