--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -167,8 +167,9 @@
             .topic-abouts{
                 .about{
                     p{
-                        font-size: 12px;
+                        font-size: 13px;
                         max-width: 207px;
+                        font-weight: 600;
                     }
                 }
             }
@@ -202,7 +203,7 @@
             .topic-abouts{
                 .about{
                     p{
-                        font-size: 9px;
+                        font-size: 12px;
                     }
                 }
             }
