--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -118,6 +118,7 @@ header {
       padding: 30px 30px;
       .close-nav {
         cursor: pointer;
+        align-self: flex-end;
       }
       ul {
         display: flex;
