--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -17,6 +17,9 @@
                     height: 163px;
                     background-color: rgba(197, 242, 203, 0.65);
                     border-radius: 50%;
+                    font-size: 45px;
+                    font-weight: 900;
+                    color: #4b9895;
                     img{
                         width: 103px;
                         height: 103px;
@@ -49,6 +52,7 @@
                     .card-img{
                         width: 123px;
                         height: 123px;
+                        font-size: 35px;
                         img{
                             width: 73px;
                             height: 73px;
@@ -75,6 +79,7 @@
                     .card-img{
                         width: 80px;
                         height: 80px;
+                        font-size: 30px;
                         img{
                             width: 50px;
                             height: 50px;
