--- a/src/styles/components/_gks.scss
+++ b/src/styles/components/_gks.scss
@@ -10,7 +10,8 @@
             max-width: 730px;
         }
         .gks-menu{
-            margin-bottom: px;
+            // margin-bottom: px;
+            gap: 20px;
             width: 100%;
             .menu-left{
                 width: 483px;
@@ -22,52 +23,14 @@
             }
             .menu-right{
                 max-width: 598px;
-                .menu-right-top{
-                    margin-bottom: 44px;
-                    h5{
-                        font-family: "Gilroy", sans-serif;;
-                        font-weight: 400;
-                        font-size: 24px;
-                        color: #333;
-                        margin-bottom: 15px;
-                        span{
-                            color: #abddb1;
-                        }
-                    }
-                    p{
-                        font-family: "Gilroy", sans-serif;;
-                        font-weight: 400;
-                        font-size: 18px;
-                        line-height: 150%;
-                        color: #333;
-                        span{
-                            color: #73c0bd;
-                        }
-                    }
-                }
-                .menu-right-bottom{
-                    h5{
-                        font-family: "Gilroy-medium", sans-serif;;
-                        font-weight: 400;
-                        font-size: 24px;
-                        color: #333;
-                        margin-bottom: 15px;
-                    }
-                    p{
-                        font-family: "Gilroy", sans-serif;;
-                        font-weight: 400;
-                        font-size: 18px;
-                        line-height: 150%;
-                        color: #333;
-                        display: flex;
-                        gap: 10px;
-                        span{
-                            width: 5px;
-                            height: 5px;
-                            background: #000;
-                            border-radius: 50%;
-                            transform: translateY(10px);
-                        }
+                p{
+                    font-family: "Gilroy", sans-serif;;
+                    font-weight: 400;
+                    font-size: 18px;
+                    line-height: 150%;
+                    color: #333;
+                    span{
+                        color: #73c0bd;
                     }
                 }
             }
