--- a/src/styles/components/_faq.scss
+++ b/src/styles/components/_faq.scss
@@ -21,7 +21,7 @@
                 .faq-accardion-header{
                     border-radius: 10px;
                     width: 100%;
-                    background: rgba(215, 248, 219, 0.65);
+                    background: rgb(255, 255, 255);
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
