--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -1,91 +1,72 @@
 .hero{
-    padding-top: 73px;
-    padding-bottom: 50px;
     position: relative;
     overflow-x: hidden;
     overflow-y: hidden;
-    .hero-content{
-        z-index: 9999;
-        .korea-lng{
-            gap: 15px;
-            margin-bottom: 23px;
-            .line{
-                background: rgb(171, 221, 177);
-                border-radius: 3px;
-                width: 28px;
-                height: 1px;
-            }
-            p{
-                font-family: "Montserrat", sans-serif;
-                max-width: 356px;
-                font-size: 18px;
-                color: #333;
-            }
-        }
-        h1{
-            font-family: "Gilroy", sans-serif;
-            font-weight: 300;
-            font-size: 54px;
-            color: #000;
-            max-width: 807px;
-            line-height: 49px;
-        }
-        .topic-abouts{
-            gap: 50px;
-            .about{
+    padding-top: 50px;
+        .hero-content{
+            .korea-lng{
                 gap: 15px;
+                margin-bottom: 23px;
+                .line{
+                    background: rgb(171, 221, 177);
+                    border-radius: 3px;
+                    width: 28px;
+                    height: 1px;
+                }
                 p{
-                    max-width: 283px;
+                    font-family: "Montserrat", sans-serif;
+                    max-width: 356px;
                     font-size: 18px;
                     color: #333;
-                    font-family: "Montserrat", sans-serif;
                 }
-                &:first-child{
+            }
+            h1{
+                font-family: "Gilroy", sans-serif;
+                font-weight: 300;
+                font-size: 54px;
+                color: #000;
+                max-width: 807px;
+                line-height: 49px;
+            }
+            .topic-abouts{
+                gap: 50px;
+                .about{
+                    gap: 15px;
                     p{
-                        max-width: 240px;
+                        max-width: 283px;
+                        font-size: 18px;
+                        color: #333;
+                        font-family: "Montserrat", sans-serif;
+                    }
+                    &:first-child{
+                        p{
+                            max-width: 240px;
+                        }
                     }
                 }
             }
-        }
-        .hero-bottom{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            max-width: 335px;
-            gap: 18px;
-            p{
-                font-family: "Montserrat", sans-serif;
-                font-weight: 400;
-                font-size: 16px;
-                color: #000;
+            .hero-bottom{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                max-width: 335px;
+                gap: 18px;
+                p{
+                    font-family: "Montserrat", sans-serif;
+                    font-weight: 400;
+                    font-size: 16px;
+                    color: #000;
+                }
             }
         }
-    }
-    .hero-bg{
-        position: absolute;
-        right: -140px;
-        bottom: -10px;
-        width: 600px;
-        z-index: -1;
-        img{
-            width: 100%;
-            height: auto;
-        }
-    }
-}
-
-@media only screen and (max-width: 1200px) {
-    .hero{
-        .hero-bg{
-            bottom: 0;
-        }
-    }
     
 }
 
+
 @media only screen and (max-width: 1110px) {
     .hero{
-        padding-top: 10px;
+        padding-top: 50px;
+        padding-bottom: 30px;
         .hero-content{
             h1{
                 font-size: 36;
@@ -109,7 +90,6 @@
 
 @media only screen and (max-width: 987px) {
     .hero{
-        height: 600px;
         .hero-content{
             .korea-lng{
                 p{
@@ -118,7 +98,7 @@
             }
             h1{
                 font-size: 36px;
-                max-width: 485px;
+                max-width: 600px;
                 margin-bottom: 20px;
             }
             .topic-abouts{
@@ -145,7 +125,7 @@
 }
 @media only screen and (max-width: 750px) {
     .hero{
-        height: 500px;
+        padding-top: 20px;
         .hero-bg{
             width: 600px;
             right: -150px;
@@ -158,7 +138,6 @@
 
 @media only screen and (max-width: 640px) {
     .hero{
-        height: 500px;
         .hero-content{
             h1{
                 font-size: 24px;
@@ -174,7 +153,7 @@
                 }
             }
             .hero-bottom{
-                margin: 100px auto;
+                margin: 60px auto 0;
                 p{
                     font-weight: 600;
                 }
@@ -189,8 +168,6 @@
 
 @media only screen and (max-width: 480px) {
     .hero{
-        height: 550px;
-        padding-bottom: 0;
         .hero-content{
             .korea-lng{
                 p{
@@ -208,7 +185,7 @@
                 }
             }
             .hero-bottom{
-                margin: 100px auto;
+                margin: 50px auto;
                 a{
                     button{
                         width: 300px;
