--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@
 @import "./components/about";
 @import "./components/result";
 @import "./components/gks";
-@import "./components/pupil";
+@import "./components/university";
 @import "./components/course";
 @import "./components/academy";
 @import "./components/faq";
