--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -15,7 +15,7 @@
                 .card-img{
                     width: 163px;
                     height: 163px;
-                    background-color: rgba(197, 242, 203, 0.65);
+                    background-color: rgb(255, 255, 255);
                     border-radius: 50%;
                     font-size: 45px;
                     font-weight: 900;
