--- a/src/styles/components/_course.scss
+++ b/src/styles/components/_course.scss
@@ -5,8 +5,10 @@
       margin-bottom: 63px;
     }
     .course-cards {
+      margin: 0 auto;
       display: flex;
-      gap: 10px;
+      row-gap: 20px;
+      column-gap: 10px;
       justify-content: center;
       flex-wrap: wrap;
       .course-card {
