--- a/src/styles/components/_university.scss
+++ b/src/styles/components/_university.scss
@@ -13,10 +13,11 @@
     }
     .university-swiper{
         margin-bottom: 30px;
+        // overflow-y: hidden;
         .university-card {
             border-radius: 40px;
             width: 380px;
-            height: 450px;
+            height: 460px;
             background: #ffffff;
             margin-right: 15px;
             .card-info {
