--- a/src/styles/components/_course.scss
+++ b/src/styles/components/_course.scss
@@ -44,9 +44,8 @@
           .description {
             font-weight: 400;
             font-size: 15px;
-            line-height: 150%;
+            // line-height: 150%;
             color: #555;
-            max-width: 233px;
             font-family: "Gilroy", sans-serif;
             margin-bottom: 30px;
             span {
