--- a/src/styles/components/_university.scss
+++ b/src/styles/components/_university.scss
@@ -13,13 +13,19 @@
     }
     .university-swiper{
         margin-bottom: 30px;
-        // overflow-y: hidden;
         .university-card {
             border-radius: 40px;
             width: 380px;
             height: 460px;
             background: #ffffff;
             margin-right: 15px;
+            .card-img{
+                img{
+                    border-radius: 40px 40px 0 0;
+                    width: 100%;
+                    height: 200px;
+                }
+            }
             .card-info {
               padding: 20px 28px;
               h6 {
@@ -43,15 +49,3 @@
     }
 }
 
-@media only screen and (max-width: 479px) {
-    .pupil{
-        .pupil-inner{
-            .pupil-content{
-                .title{
-                    font-size: 28px;
-                }
-            }
-        }
-    }
-    
-}
