--- a/src/styles/components/_gks.scss
+++ b/src/styles/components/_gks.scss
@@ -130,6 +130,7 @@
 
 @media only screen and (max-width: 639px) {
     .gks{
+        padding-bottom: 0;
         .gks-content{
             gap: 30px;
             .title{
