--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -68,6 +68,7 @@ header {
           font-family: "Gilroy-Medium", sans-serif;
           font-size: 16px;
           color: #333;
+          margin-bottom: 5px;
         }
         .header-contact-bottom {
           font-family: "Inter", sans-serif;
