--- a/src/styles/components/_academy.scss
+++ b/src/styles/components/_academy.scss
@@ -62,9 +62,11 @@
 
 @media only screen and (max-width: 639px) {
     .academy{
+        padding-top: 0;
         .academy-content{
             .title{
                 font-size: 28px;
+                margin-bottom: 60px;
             }
             .academy-cards{
                 .academy-card{
