--- a/src/styles/components/_course.scss
+++ b/src/styles/components/_course.scss
@@ -39,6 +39,7 @@
               font-size: 10px;
               line-height: 150%;
               color: #f7f7f7;
+              padding: 10px;
             }
           }
           .description {
@@ -132,6 +133,7 @@
 }
 @media only screen and (max-width: 650px) {
   .course{
+    padding-top: 0;
     .course-content{
       .course-cards{
         margin: 0 auto;
