--- a/src/styles/components/_faq.scss
+++ b/src/styles/components/_faq.scss
@@ -78,9 +78,11 @@
 
 @media only screen and (max-width: 639px) {
     .faq{
+        padding-top: 0;
         .faq-content{
             .title{
                 font-size: 28px;
+                margin-bottom: 20px;
             }
             .faq-accardions{
                 .faq-accardion{
