--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -138,6 +138,7 @@
 
 @media only screen and (max-width: 640px) {
     .hero{
+        padding-bottom: 0;
         .hero-content{
             h1{
                 font-size: 24px;
