--- a/src/styles/components/_support.scss
+++ b/src/styles/components/_support.scss
@@ -79,6 +79,12 @@
     }
 }
 
+@media only screen and (max-width: 640px) {
+    .support{
+        padding-top: 0;
+    }
+}
+
 @media only screen and (max-width: 450px) {
     .support{
         .support-content{
