--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,4 +16,5 @@
 @import "./components/faq";
 @import "./components/support";
 @import "./components/modal";
-@import "./components/news"
+@import "./components/news";
+@import "./components/loader"
