--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,4 +17,5 @@
 @import "./components/support";
 @import "./components/modal";
 @import "./components/news";
-@import "./components/loader"
+@import "./components/loader";
+@import "./components/license"
